--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,8 +15,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
@@ -50,7 +49,8 @@
             android:name=".activity.user.LoginActivity"
             android:label="@string/title_activity_login" />
         <activity android:name=".activity.user.RegisterActivity" />
-        <activity android:name=".activity.Administration.AdministrationActivity"></activity>
+        <activity android:name=".activity.Administration.AdministrationActivity" />
+        <activity android:name=".activity.Almanax.AlmanaxActivity"></activity>
     </application>
 
 </manifest>
