--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,4 @@
 apply plugin: 'com.android.application'
-<<<<<<< HEAD
-apply plugin: 'com.jakewharton.butterknife'
-=======
->>>>>>> a6560b5271fe99fb3caee5bfd49c0b558678e595
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'realm-android'
 
@@ -36,8 +32,8 @@ android {
         enabled = true;
     }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 realm {
@@ -51,14 +47,9 @@ dependencies {
     compile project(path: ':androidhttprequestlibrairy')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
-<<<<<<< HEAD
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-=======
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
->>>>>>> a6560b5271fe99fb3caee5bfd49c0b558678e595
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
@@ -73,11 +64,6 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:8.5.1'
-<<<<<<< HEAD
     annotationProcessor 'com.android.databinding:compiler:2.3.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-=======
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-
->>>>>>> a6560b5271fe99fb3caee5bfd49c0b558678e595
 }
