--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,15 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'realm-android'
 
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.giroux.kevin.dofustuff"
         minSdkVersion 15
-        targetSdkVersion 25
-        
+        targetSdkVersion 26
+
         versionCode 1
         versionName "0.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -19,13 +18,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "OBJECT_SERVER_IP", "\"nexus-factory.ovh\""
+            buildConfigField "String", "OBJECT_SERVER_IP", "\"realm.nexus-factory.ovh\""
         }
         debug {
             // This will automatically detect the IP address of the machine building RealmTasks.
             // It is assumed that this machine is also running the Object Server.
             // If not, replace 'host' with the IP of the machine hosting the server.
-            buildConfigField "String", "OBJECT_SERVER_IP", "\"nexus-factory.ovh\""
+            buildConfigField "String", "OBJECT_SERVER_IP", "\"realm.nexus-factory.ovh\""
         }
     }
     dataBinding {
@@ -35,6 +34,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
 realm {
     syncEnabled = true
@@ -45,25 +45,25 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(path: ':androidhttprequestlibrairy')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
-    compile 'com.github.amlcurran.showcaseview:library:5.0.0'
-    compile 'org.jsoup:jsoup:1.7.3'
-    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:support-v4:26.1.0'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
+    compile 'org.jsoup:jsoup:1.10.2'
+    compile 'com.google.firebase:firebase-appindexing:11.4.2'
     compile 'org.apache.commons:commons-collections4:4.1'
     compile 'org.apache.commons:commons-lang3:3.4'
-    compile 'io.realm:android-adapters:1.4.0'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
-
+    compile 'io.realm:android-adapters:2.1.0'
+    compile 'com.github.bumptech.glide:glide:4.2.0'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.android.databinding:compiler:2.3.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    annotationProcessor 'com.android.databinding:compiler:2.3.2'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
 }
