--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,12 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
-        classpath 'com.jakewharton:butterknife-gradle-plugin:8.5.1'
-        classpath 'me.tatarka:gradle-retrolambda:3.4.0'
-        classpath "io.realm:realm-gradle-plugin:2.3.0"
+        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
+        classpath "io.realm:realm-gradle-plugin:3.7.2"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,7 +17,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://maven.google.com' }
         mavenCentral()
+
     }
 }
 
