--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,21 +4,21 @@ apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.giroux.kevin.dofustuff"
         minSdkVersion 15
         targetSdkVersion 26
 
         versionCode 1
-        versionName "0.0.1"
+        versionName "0.1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "OBJECT_SERVER_IP", "\"realm.nexus-factory.ovh\""
+            buildConfigField "String", "OBJECT_SERVER_IP", "\"realmexus-factory.ovh\""
         }
         debug {
             // This will automatically detect the IP address of the machine building RealmTasks.
@@ -28,7 +28,7 @@ android {
         }
     }
     dataBinding {
-        enabled = true;
+        enabled = true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -40,30 +40,31 @@ realm {
     syncEnabled = true
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile project(path: ':androidhttprequestlibrairy')
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
-    compile 'org.jsoup:jsoup:1.10.2'
-    compile 'com.google.firebase:firebase-appindexing:11.4.2'
-    compile 'org.apache.commons:commons-collections4:4.1'
-    compile 'org.apache.commons:commons-lang3:3.4'
-    compile 'io.realm:android-adapters:2.1.0'
-    compile 'com.github.bumptech.glide:glide:4.2.0'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
-    testCompile 'junit:junit:4.12'
+    implementation project(path: ':androidhttprequestlibrairy')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
+    implementation 'org.jsoup:jsoup:1.10.2'
+    implementation 'com.google.firebase:firebase-appindexing:11.4.2'
+    implementation 'org.apache.commons:commons-collections4:4.1'
+    implementation 'org.apache.commons:commons-lang3:3.4'
+    implementation 'io.realm:android-adapters:2.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.2.0'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.google.code.gson:gson:2.8.1'
+    testImplementation 'junit:junit:4.12'
     annotationProcessor 'com.android.databinding:compiler:2.3.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+    implementation files('libs/commons-0.1.0-SNAPSHOT.jar')
 }
