--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ buildscript {
         maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
+        classpath 'com.android.tools.build:gradle:3.0.0-rc2'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
-        classpath "io.realm:realm-gradle-plugin:3.7.2"
+        classpath "io.realm:realm-gradle-plugin:4.1.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
