--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'realm-android'
 
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.giroux.kevin.dofustuff"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 27
 
         versionCode 1
         versionName "0.1.1"
@@ -45,17 +45,17 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation project(path: ':androidhttprequestlibrairy')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
     implementation 'org.jsoup:jsoup:1.10.2'
-    implementation 'com.google.firebase:firebase-appindexing:11.4.2'
+    implementation 'com.google.firebase:firebase-appindexing:11.8.0'
     implementation 'org.apache.commons:commons-collections4:4.1'
     implementation 'org.apache.commons:commons-lang3:3.4'
     implementation 'io.realm:android-adapters:2.1.0'
@@ -63,8 +63,9 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.google.code.gson:gson:2.8.1'
     testImplementation 'junit:junit:4.12'
-    annotationProcessor 'com.android.databinding:compiler:2.3.2'
+    annotationProcessor 'com.android.databinding:compiler:3.0.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
-    implementation files('libs/commons-0.1.0-SNAPSHOT.jar')
+    implementation 'com.giroux.kevin.dofustuff:commons:0.1.1-SNAPSHOT'
+    //implementation files('libs/commons-0.1.0-SNAPSHOT.jar')
 }
