--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,9 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+SNAPSHOT_REPOSITORY_URL =https://nexus.nexus-factory.ovh/repositories/maven-snapshots/
+RELEASE_REPOSITORY_URL =https://nexus.nexus-factory.ovh/repositories/maven-releases/
+
+NEXUS_USERNAME=dofustuff
+NEXUS_PASSWORD=dofustuff
