--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,11 @@ buildscript {
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
-        classpath "io.realm:realm-gradle-plugin:4.3.1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,18 +18,9 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
-        maven {
-            credentials {
-                username 'dofustuff'
-                password 'dofustuff'
-            }
-            url 'https://nexus.nexus-factory.ovh/repository/maven-public/'
-            authentication {
-                basic(BasicAuthentication)
-            }
-        }
         mavenCentral()
 
+        google()
     }
 }
 
