--- a/androidhttprequestlibrairy/build.gradle
+++ b/androidhttprequestlibrairy/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '28.0.1'
 
     defaultConfig {
         minSdkVersion 15
@@ -16,11 +16,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'org.jsoup:jsoup:1.10.2'
+    implementation 'com.google.code.gson:gson:2.8.1'
+    api files('libs/errors-0.1.3-SNAPSHOT.jar')
 }
