--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,15 @@
 apply plugin: 'com.android.application'
-apply plugin: 'realm-android'
 
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '28.0.1'
     defaultConfig {
         applicationId "com.giroux.kevin.dofustuff"
         minSdkVersion 15
         targetSdkVersion 27
-
         versionCode 1
-        versionName "0.1.1"
+        versionName "0.1.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -36,36 +34,32 @@ android {
     }
 
 }
-realm {
-    syncEnabled = true
-}
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation project(path: ':androidhttprequestlibrairy')
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
-    implementation 'com.android.support:cardview-v7:27.0.2'
-    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
     implementation 'org.jsoup:jsoup:1.10.2'
-    implementation 'com.google.firebase:firebase-appindexing:11.8.0'
+    implementation 'com.google.firebase:firebase-appindexing:16.0.1'
     implementation 'org.apache.commons:commons-collections4:4.1'
     implementation 'org.apache.commons:commons-lang3:3.4'
-    implementation 'io.realm:android-adapters:2.1.0'
+    implementation 'commons-codec:commons-codec:1.11'
     implementation 'com.github.bumptech.glide:glide:4.2.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.google.code.gson:gson:2.8.1'
     testImplementation 'junit:junit:4.12'
-    annotationProcessor 'com.android.databinding:compiler:3.0.1'
+    annotationProcessor 'com.android.databinding:compiler:3.1.4'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
-    implementation 'com.giroux.kevin.dofustuff:commons:0.1.2-SNAPSHOT'
-    //implementation files('libs/commons-0.1.0-SNAPSHOT.jar')
+    implementation files('libs/commons-0.1.3-SNAPSHOT.jar')
 }
